--- a/src/components/Car/Car.css
+++ b/src/components/Car/Car.css
@@ -5,16 +5,45 @@
 
 
 .product{
-    width: 280px;
-    height: 500px;
-    padding: 10px;
+    width: 300px;
+    height: 360px;
     margin-bottom: 50px;
     background-color: rgb(201, 227, 250);
-    border: 2px solid rgb(201, 227, 250);
     border-radius: 10px;
+    box-shadow: 3px 3px lightblue;
+    position: relative;
 }
 
+
 img{
-    min-height: 180px;
-    border-radius: 5px;
+    min-height: 220px;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.product-info{
+    padding: 10px 20px;
+}
+
+.cart-btn{
+    width: 100%;
+    background-color: rgb(247, 190, 115);
+    border: none;
+    border-radius: 0px 0px 10px 10px ;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.cart-btn p{
+    margin-right: 10px;
+    font-weight: 600;
+    font-size: 16px;
+    padding-top: 5px;
+    margin-top: 5px
+}
+.cart-btn:hover{
+    background-color: orange;
 }
