--- a/src/components/Cars/Cars.css
+++ b/src/components/Cars/Cars.css
@@ -1,11 +1,56 @@
 .shop-container{
     display: grid;
     grid-template-columns: 4fr 1fr;
-    margin: 20px 50px;
+    
+}
+
+.heading{
+    background-color: rgb(201, 227, 250) ;
+    text-align: center;
+    padding: 10px 0px;
+    font-size: 40px;
+    font-weight: 900;
+    margin: 0px 0px 15px 0px; 
 }
 
 
 .products{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    margin: 0px 20px 0px 50px;
+}
+
+.cart-container{
+    background-color: rgb(14, 28, 41);
+    
+    
+}
+.cart-data{
+    position: sticky;
+    top: 20px;
+}
+.cart-heading{
+    text-align: center;
+    margin-top: 20px;
+    color: white;
+}
+
+.chose-btn{
+    background-color: aqua;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+}
+
+.update-cart{
+    padding: 20px;
+}
+
+hr{
+    color: aqua ;
+    border: 2px solid aqua;
 }
