--- a/src/components/Cars/Cars.css
+++ b/src/components/Cars/Cars.css
@@ -1,6 +1,7 @@
 .shop-container{
     display: grid;
     grid-template-columns: 4fr 1fr;
+
     
 }
 
@@ -17,11 +18,21 @@
 .products{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin: 0px 20px 0px 50px;
+    margin: 0px 30px;
 }
 
 .cart-container{
     background-color: rgb(14, 28, 41);
     
     
+}
+
+
+@media only screen and (max-width: 767px) {
+   
+    .products{
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 0px 5px 0px 5px;
+    }
 }
