--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -37,3 +37,16 @@ hr{
     border-radius: 5px;
     background-color: rgba(6, 220, 228, 0.062);
 }
+
+
+
+@media only screen and (max-width: 480px){
+    .cart-item p{
+        color: white;
+        height: 65px;
+        margin: 5px 10px;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: rgba(6, 220, 228, 0.062);
+    }
+}
